# ER-Racing-Car-Katas-cmake_version

./: README.md
Source/TurnTicketDispenser.Test/source/: TurnTicketDispenserTest.cpp
cmake_version/: CMakeLists.txt
cmake_version/Source/TelemetrySystem.Test/source/: TelemetryDiagnosticControlsTest.cpp
cmake_version/Source/TirePressureMonitoring/: .project
cmake_version/Source/TirePressureMonitoring.Test/: .project
gtest_version/tyrepressure/: Alarm.cpp  Alarm.hpp  Alarm.tests.cpp  AlarmBuilder.cpp  AlarmBuilder.hpp  CMakeLists.txt  FakeAlarm.cpp  FakeAlarm.h  ISensor.cpp  ISensor.hpp  MockSensor.cpp  MockSensor.h  SafetyRange.cpp  SafetyRange.h  SafetyRange.hpp  Sensor.cpp  Sensor.hpp  SensorThatProbes.cpp  SensorThatProbes.hpp  TelemetryPressureSensor.cpp  TelemetryPressureSensor.hpp  TestableAlarm.cpp  TestableAlarm.h  TirePressureSensor.cpp  TirePressureSensor.hpp  TirePressureSensorMock.cpp  TirePressureSensorMock.hpp  TyrepressureSensor.cpp  TyrepressureSensor.hpp  TyrepressureSensorStub.hpp  makefile
gtest_version/tyrepressure/lib/googletest-master/: CMakeLists.txt
gtest_version/tyrepressure/lib/googletest-master/googletest/: CMakeLists.txt
gtest_version/tyrepressure/lib/safetyRange/: SafetyRange.cpp  SafetyRange.hpp  SafetyRangeNormalTyre.cpp  SafetyRangeNormalTyre.hpp  SafetyRangeWetTyre.cpp  SafetyRangeWetTyre.hpp
gtest_version/tyrepressure/lib/sensor/: ISensor.hpp  TyrepressureSensor.hpp  TyrepressureSensorNormalTyre.cpp  TyrepressureSensorNormalTyre.hpp  TyrepressureSensorWetTyre.cpp  TyrepressureSensorWetTyre.hpp
gtest_version/tyrepressure/test/: Alarm.NormalTyre.tests.cpp  Alarm.WetTyre.tests.cpp  AlarmBuilder.cpp  AlarmBuilder.hpp  AlarmBuilderNormalTyre.cpp  AlarmBuilderNormalTyre.hpp  AlarmBuilderWetTyre.cpp  AlarmBuilderWetTyre.hpp  TyrepressureSensorNormalTyreStub.hpp  TyrepressureSensorStub.hpp  TyrepressureSensorWetTyreStub.hpp
